Update connectors/kafka/src/main/java/io/camunda/connector/kafka/model/KafkaPropertiesUtil.java
Co-authored-by: Igor Petrov <108870003+igpetrov@users.noreply.github.com>